# giants

./: .gitignore  LICENSE  README.md  housekeeping.py  paper.bib  paper.md  prepare_batch.py  pyproject.toml  requirements.txt  run_giants.py  run_giants.srun  run_giants_gpu.srun  setup.py  test.py  transit_stats.txt
.github/workflows/: draft-pdf.yml  giants-tests.yml
Notebooks/: Untitled.ipynb  example.ipynb  individual_quicklooks.ipynb  planet_candidates.ipynb  stellar_candidates.ipynb  testing.ipynb
Notebooks/chains/: 335965870.txt  335965870IS.iterinfo  335965870live.points  335965870phys_live.points  335965870summary.txt
giants/: __init__.py  batch_run.py  giants.py  ica.py  lomb.py  plotting.py  transit.py  utils.py
giants.egg-info/: PKG-INFO  SOURCES.txt
giants/data/: Kepler-TESS-RGs.csv  SCVZ_tics.csv  sco-cen-b-stars.csv  scvz_tayar.txt
giants/data/metadata/s0002/: cbv_components_s0002_0001_0001.txt  cbv_components_s0002_0001_0002.txt  cbv_components_s0002_0001_0003.txt  cbv_components_s0002_0001_0004.txt  cbv_components_s0002_0002_0001.txt  cbv_components_s0002_0002_0002.txt  cbv_components_s0002_0002_0003.txt  cbv_components_s0002_0002_0004.txt  cbv_components_s0002_0003_0001.txt  cbv_components_s0002_0003_0002.txt  target_s0002.fits  (+6 more)
giants_new/: target.py
src/: batch_run.py  plotting.py  target.py  transit.py
src/data/: downlinks.txt
src/giants/: __init__.py  lomb.py  plotting.py  run_giants.py  target.py  utils.py
src/giants/data/: TESS_orbit_times.csv  sector_times.csv
tests/: test_target.py
zip/: plotting.py  test.py
(+122 files in other folders)
