[tool.poetry]
name = "giants-pipeline"
version = "1.0.0"
description = "A Python package to search for planets orbiting evolved stars."
license = "MIT"
authors = ["Nicholas Saunders", "Samuel Grunblatt"]
readme = "README.md"
homepage = "https://github.com/nksaunders/giants"
repository = "https://github.com/nksaunders/giants"
keywords = ["astronomy", "exoplanets", "TESS", "Kepler"]
packages = [{ include = "giants", from = "src" }]

classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.18"
astropy = ">=5.0"
matplotlib = ">=3.1"
pandas = ">=1.3.6"
astroquery = ">=0.3.10"
lightkurve = ">=2.0"
tess-point = ">=0.5"  
astrocut = ">=0.12"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.1.2"  # Testing framework
pytest-cov = ">=2.10.1"  # Test coverage reporting
black = ">=21.12b0"  # Code formatting
flake8 = ">=3.8.4"  # Linting for style issues
mypy = ">=0.930"  # Type checking
isort = ">=5.6.4"  # Sorts imports
pylint = ">=2.6.0"  # More advanced linting

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]